# emobanana

./: .gitignore  .redocly.yaml  Cargo.toml  README.md  banner.html  capture_banner.js  openapi.yaml  package-lock.json  package.json  wrangler.toml
.github/workflows/: ci.yml
backend/: Cargo.toml  index.html  openapi.yaml  privacy_policy.html  swagger-ui.html
backend/_astro/: EmoBananaApp.BxDkulSD.js  EmoBananaApp.aJDWk7M7.js  index.IQ3vksgp.css  index.nCNIo1WA.css
backend/src/: error.rs  handlers.rs  lib.rs  models.rs
backend/src/providers/: gemini.rs
cli/: Cargo.toml
cli/src/: api.rs  cli.rs  error.rs  main.rs  models.rs  utils.rs
scripts/: build-and-deploy.sh
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  privacy_policy.html  swagger-ui.html
src/handlers/: images.rs
src/providers/: gemini.rs
web/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json
web/public/: site.webmanifest
web/src/: env.d.ts
web/src/components/: EmoBananaApp.tsx  EmojiGrid.tsx  ErrorDisplay.tsx  ImageUpload.tsx  TransformResult.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
