[package]
name = "emobanana"
version = "0.1.0"
edition = "2021"
description = "Emoji-based facial expression transformation using Gemini 2.5 Flash Image API"
repository = "https://github.com/yourusername/emobanana"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "emobanana-cli"
path = "src/main.rs"

[dependencies]
worker = { version = "0.6.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
futures = "0.3"
console_error_panic_hook = "0.1"
async-trait = "0.1"
url = "2.5"
urlencoding = "2"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"