[package]
name = "emobanana-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool to test the Emobanana backend API"
repository = "https://github.com/yourusername/emobanana"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"